# transcriber

./: README.md  pyproject.toml
docs/plans/: 2026-03-06-faster-whisper-backend-design.md  2026-03-06-faster-whisper-backend.md  2026-03-06-transcriber-design.md  2026-03-06-transcriber-implementation.md
tests/: test_audio.py  test_cli.py  test_config.py  test_output.py
tests/backends/: test_base.py  test_faster_whisper.py  test_huggingface.py  test_ollama.py
transcriber/: audio.py  cli.py  config.py  output.py
transcriber/backends/: base.py  faster_whisper.py  huggingface.py  ollama.py
