[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcriber"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "httpx>=0.27",
    "transformers>=4.40",
    "torch>=2.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
transcribe = "transcriber.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
